# LucyGL

./: CMakeLists.txt  README.md
include/LucyGL/: API.h  DrawCall.h  FrameBuffer.h  IndexBuffer.h  Shader.h  Status.h  Texture.h  Types.h  UniformBuffer.h  VertexArray.h  VertexBuffer.h
include/glad/: glad.h
src/: glad.c
src/OpenGL/: DrawCall.cpp  FrameBuffer.cpp  IndexBuffer.cpp  Shader.cpp  Texture.cpp  Types.cpp  UniformBuffer.cpp  VertexArray.cpp  VertexBuffer.cpp
